--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background: black;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,7 +9,7 @@
   text-align: center;
 }
 
-.logo {
+/*.logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
+}*/
