--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  background: black;
-}
-
 @import url("https://use.typekit.net/wqf6rpa.css");
 #root {
 margin: 0;
@@ -9,8 +5,10 @@ padding: 0;
 box-sizing: border-box;
 font-family: roboto-mono, sans-serif;
 }
-
-/*.sort-wrap {
+body {
+  background: black;
+}
+.sort-wrap {
     width: 90%;
     margin: auto;
 }
@@ -81,4 +79,4 @@ font-family: roboto-mono, sans-serif;
         background-color: rgba(190, 190, 190, 0.093);
         padding: 5px 10px;
     }
-}*/
+}
