--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@ font-family: roboto-mono, sans-serif;
 }
 body {
   background: black;
+    display: flex;
+  place-items: center;
 }
 .sort-wrap {
     width: 90%;
