--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 }
 
 .news_container a {
+  text-decoration: none;
   line-height: 0.2rem;
   color: rgba(255, 255, 255, 0.8);
 }
@@ -66,13 +67,13 @@
 }
 
 .sorting-bar {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    scrollbar-width: none;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 .logo:hover {
