--- a/src/App.css
+++ b/src/App.css
@@ -2,74 +2,75 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	font-family: roboto-mono, sans-serif;
 }
 body {
-  background: black;
-    display: flex;
-  place-items: center;
+	background: black;
+	display: flex;
+	place-content: center;
 }
 .sub_infos {
-  display: flex;
-  justify-content: left;
-  font-size: 0.7rem;
+	display: flex;
+	justify-content: left;
+	font-size: 0.7rem;
 }
-
 .sub_infos > * {
-  margin-right: 7px;
-  margin-top: 7px;
-  padding: 0px 5px;
-  background-color: rgba(64, 255, 0, 0.377);
-  border-radius: 3px;
+	margin-right: 7px;
+	margin-top: 7px;
+	padding: 0px 5px;
+	background-color: rgba(64, 255, 0, 0.377);
+	border-radius: 3px;
 }
 .sort-wrap {
-    width: 90%;
-    margin: auto;
+	width: 90%;
+	margin: auto;
+	display: flex;
+	justify-content: center;
 }
-
 .news_container {
-  margin: 20px;
-  background-color: #000000;
-  border: 1px solid rgb(64, 255, 0);
-  color: rgb(64, 255, 0);
-  max-width: 400px;
-  border-radius: 10px;
-  padding: 5px 12px 12px 12px;
-  text-align: left;
+	margin: 20px;
+	background-color: #000000;
+	border: 1px solid rgb(64, 255, 0);
+	color: rgb(64, 255, 0);
+	max-width: 400px;
+	border-radius: 10px;
+	padding: 5px 12px 12px 12px;
+	text-align: left;
 }
-
 .news_container:hover {
-  background-color: rgb(35, 0, 54);
-  box-shadow: 0px 0px 13px 0px rgba(64, 255, 0, 0.3);
-  border: 1.5px solid rgb(64, 255, 0);
+	background-color: rgb(35, 0, 54);
+	box-shadow: 0px 0px 13px 0px rgba(64, 255, 0, 0.3);
+	border: 1.5px solid rgb(64, 255, 0);
 }
-
 .news_container a {
-  text-decoration: none;
-  line-height: 0.2rem;
-  color: rgba(255, 255, 255, 0.8);
-}
+	text-decoration: none;
+	line-height: 0.2rem;
 
+}
 .news_container a:hover {
-  color: rgb(255, 98, 0);
+	color: rgb(255, 98, 0);
 }
 
 .news_container h2 {
-  margin: 0;
-  line-height: 1.9rem;
+	margin: 0;
+	line-height: 1.9rem;
+	color: rgb(64, 255, 0);
 }
 .news_container p {
-  line-height: 1.3rem;
-  margin: 0;
+	line-height: 1.3rem;
+	margin: 0;
 }
 .sorting-bar {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-  overflow-x: scroll;
-  scrollbar-width: none;
+	list-style: none;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	flex-wrap: nowrap;
+	overflow-x: scroll;
+	scrollbar-width: none;
 }
 .sorting-bar::-webkit-scrollbar {
 	display: none;
