--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,23 @@ body {
   color: rgb(0, 255, 0);
 }
 
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid rgb(0, 255, 0); /* Light grey */
+  border-top: 10px solid #383636; /* Black */
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
 @media (max-width: 599px) {
   html,
   body {
