--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -9,6 +9,11 @@
   display: flex;
   background-color: transparent;
   justify-content: center;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .search-input {
@@ -19,6 +24,12 @@
   padding: 8px 12px;
   width: 400px;
   margin-right: 20px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
 }
 
 .search-button {
@@ -30,4 +41,9 @@
   padding: 8px 12px;
   cursor: pointer;
   font-size: 15px;
+
+  @media (max-width: 768px) {
+    width: 50%;
+    margin-left: 30%;
+  }
 }
